fix z-index

--- a/Book_Flask/static/css/css.css
+++ b/Book_Flask/static/css/css.css
@@ -184,7 +184,6 @@ nav.black {
 /* ---------------------------------------------- section items */
 #sec-items {
 	margin: 10px 5px 0 5px;
-	height: 1200px;
 }
 
 #sec-items div {
@@ -205,7 +204,6 @@ nav.black {
 	border-style: double;
 	border-width: 5px;
 	border-color: green;
-	z-index: -1000;
 }
 
 .card img {
